--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Munter - Bootstrap One Page Template</title>
+  <title>Sarai Santiago</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -47,7 +47,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#intro" class="smoothscroll">Home</a></li>
-          <li><a href="#about-us" class="smoothscroll">About Us</a></li>
+          <li><a href="#about-us" class="smoothscroll">Sobre Mi</a></li>
           <li><a href="#portfolio" class="smoothscroll">Portfolio</a></li>
           <li><a href="#process" class="smoothscroll">Process</a></li>
           <li><a href="#clients" class="smoothscroll">Clients</a></li>
@@ -63,8 +63,8 @@
     <div class="container">
       <div id="home-row-1" class="row clearfix">
         <div class="col-12">
-          <h1 class="font-semibold">MUNTER <span class="font-thin">DESIGN</span></h1>
-          <h4 class="font-thin">We are an <span class="font-semibold">independent interactive agency</span> based in London.</h4>
+          <h1 class="font-semibold"><span class="font-thin">Hola, soy </span>Sarai Santiago</h1>
+          <h4 class="font-thin">Soy <span class="font-semibold">FULL STACK DEVELOPER, </span>y vivo en Chile.</h4>
           <br>
           <br>
         </div>
@@ -95,7 +95,7 @@
   <div class="slide story" id="about-us" data-slide="2">
     <div class="container">
       <div class="row title-row">
-        <div class="col-12 font-thin">Contrary to popular belief, <span class="font-semibold">Lorem Ipsum</span> <br>is not simply random text.</div>
+        <div class="col-12 font-thin">Si pudiese enumerar las cosas que quiero aprender... más importante es que sepas <span class="font-semibold">Lo que sé hacer mejor</span> <br></div>
       </div>
       <!-- /row -->
       <div class="row line-row">
@@ -103,32 +103,32 @@
       </div>
       <!-- /row -->
       <div class="row subtitle-row">
-        <div class="col-12 font-thin">This is what <span class="font-semibold">we do best</span></div>
+        <div class="col-12 font-thin"><span class="font-semibold"></span></div>
       </div>
       <!-- /row -->
       <div class="row content-row">
         <div class="col-12 col-lg-3 col-sm-6">
-          <p><i class="fa fa-eye"></i></p>
-          <h2 class="font-thin">Visual <span class="font-semibold">Identity</span></h2>
-          <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+          <p><i class="fa fa-github-alt"></i></p>
+          <h2 class="font-thin"><span class="font-semibold">GIT</span></h2>
+          <h4 class="font-thin">Control de versiones y trabajo colaborativo</h4>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-lg-3 col-sm-6">
           <p><i class="fa fa-laptop"></i></p>
-          <h2 class="font-thin">Web <span class="font-semibold">Design</span></h2>
-          <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+          <h2 class="font-thin"><span class="font-semibold">Front-end</span></h2>
+          <h4 class="font-thin">JavaScript (React.js, flux, hooks, Bootstrap, CSS), RestAPI's</h4>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-lg-3 col-sm-6">
-          <p><i class="fa fa-tablet"></i></p>
-          <h2 class="font-thin">Mobile <span class="font-semibold">Apps</span></h2>
-          <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+          <p><i class="fa fa-database"></i></p>
+          <h2 class="font-thin"> <span class="font-semibold">Back-end</span></h2>
+          <h4 class="font-thin">Python (Flask, JWT), SQL (SQLite, SQLAlchemy), </h4>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-lg-3 col-sm-6">
           <p><i class="fa fa-pencil"></i></p>
-          <h2 class="font-semibold">Development</h2>
-          <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+          <h2 class="font-semibold">Metodologías Ágiles</h2>
+          <h4 class="font-thin">Sprints, Historias de Usuario, Método Lean</h4>
         </div>
         <!-- /col12 -->
       </div>
