--- a/index.html
+++ b/index.html
@@ -5528,5 +5528,6 @@
       </svg>
       <h1>Coming soon!</h1>
     </div>
+    <a href="https://storyset.com/online">Online illustrations by Storyset</a>
   </body>
 </html>
